--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.2",
+    "@next/third-parties": "^15.0.3",
     "@octokit/rest": "^21.0.2",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.5",
