--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/notifications": "^7.11.2",
     "@next/third-parties": "^15.0.3",
     "@octokit/rest": "^21.0.2",
+    "@vercel/analytics": "^1.3.2",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.5",
     "mantine-form-zod-resolver": "^1.1.0",
