--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
   "name": "codjix",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
-    "bundle": "cross-env OUTPUT=standalone next build",
+    "bundle": "cross-env BUNDLE=1 next build",
     "start": "next start -p 8000",
-    "type-check": "tsc"
+    "format": "prettier --write .",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mantine/core": "^7.11.2",
-    "@mantine/form": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/notifications": "^7.11.2",
-    "@next/third-parties": "^15.0.3",
-    "@octokit/rest": "^21.0.2",
-    "@vercel/analytics": "^1.3.2",
+    "@mantine/core": "^7.17.7",
+    "@mantine/form": "^7.17.7",
+    "@mantine/hooks": "^7.17.7",
+    "@mantine/notifications": "^7.17.7",
+    "@octokit/rest": "^21.1.1",
+    "@tanstack/react-query": "^5.75.2",
+    "@vercel/analytics": "^1.5.0",
     "cross-env": "^7.0.3",
-    "disqus-react": "^1.1.5",
-    "mantine-form-zod-resolver": "^1.1.0",
-    "next": "^14.2.5",
-    "pocketbase": "^0.21.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "universal-cookie": "^7.2.0",
-    "zod": "^3.23.8"
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "universal-cookie": "^8.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@iconify/react": "^5.0.2",
-    "@octokit/types": "^13.5.0",
-    "@types/bun": "^1.1.6",
-    "@types/node": "^22.0.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.4"
+    "@iconify/react": "^6.0.0",
+    "@octokit/types": "^14.0.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "prettier": "^3.5.3",
+    "sass-embedded": "^1.87.0",
+    "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "sharp"
+    ]
   }
 }
